--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,38 +1,95 @@
-.App {
+
+#sidebar {
+    padding: 30px;
+    width: 23%;
+    position: fixed;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    overflow-y: scroll;
+    z-index: 1001;
+    background: #000000;
+}
+
+header {
   text-align: center;
+  margin-bottom: 90px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  height: 45px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a h1 {
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  font-weight: 50px;
+  margin: 0;
+  font-weight: 700;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+span {
+    font-size: 10px;
+    text-transform: uppercase;
+    color: #999;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 1em;
+}
+
+a{
+  text-decoration: none !important;
+
+}
+
+ul {
+  list-style-type: none;
+}
+
+/*menu*/
+.side-menu li{
+ border-bottom: 1px solid rgba(255,255,255,0.09);
+  margin: 10px 0 0 0;
+  padding: 0 0 10px 0;
+
+}
+
+.side-menu {
+  margin-bottom: 90px;
+  padding: 0;
+
+}
+
+.side-menu a {
+  line-height: 1.5em;
+  color: #999;
+  font-size: 13px;
+}
+
+.side-menu a:hover {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/*footer*/
+footer ul li{
+  display: inline-block;
+  margin-right: 10px;
+  background-color: transparent;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer a {
+  color: white;
+  font-size: 18px;
+}
+
+footer a:hover {
+  color: #999;
+}
+
+small {
+  color: white;
+  text-align: center;
+  margin: 18px;
 }
