--- a/src/components/Gallery/Card/Card.css
+++ b/src/components/Gallery/Card/Card.css
@@ -12,13 +12,14 @@
   opacity: 1;
   height: auto;
   padding: 80px;
+  cursor: pointer;
 }
 
 .card-description h3 {
-    font-weight: 700;
-    margin-bottom: 5px;
-    font-size: 20px;
-    color: #fff;
+  font-weight: 700;
+  margin-bottom: 5px;
+  font-size: 25px;
+  color: #fff;
 }
 
 .img-brightness {
