--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,3 +1,13 @@
+.photo-card {
+    background-position: 40% 20%;
+    background-size: cover;
+    height: 400px;
+    text-decoration: none;
+    box-shadow: 0 0 15px rgba(6,6,6,0.56);
+    border-radius: 5px;
+    background-color: white;
+}
+
 .fav-gallery {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -11,4 +21,44 @@
   font-weight: 700;
   font-size: 30px;
   margin-top: 5px;
+}
+
+.gallery-row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.gallery-column {
+  -ms-flex: 33.33%; /* IE10 */
+  flex: 33.33%;
+  max-width: 33.33%;
+  padding: 0 4px;
+}
+
+.gallery-column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .gallery-column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .gallery-column {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
 }
