--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,7 @@ body {
   background-color: #101010;
   color: white;
   overflow-x:hidden;
+  font-family: 'Handlee', sans-serif;
 }
 
 .sections {
@@ -99,5 +100,5 @@ small {
   color: white;
   text-align: center;
   margin: 18px;
-  font-size: 13px;
+  font-size: 15px;
 }
