--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,17 @@
 body {
   background-color: #101010;
   color: white;
-  overflow-x:hidden;
+  overflow-x: hidden;
   font-family: 'Handlee', sans-serif;
 }
 
 .sections {
   width: 77%;
   float: right;
+}
+
+img {
+  background-color: #a6a6a6;
 }
 
 #sidebar {
@@ -20,6 +24,7 @@ body {
     /*overflow-y: scroll;*/
     z-index: inherit;
     background: #000000;
+
 }
 
 header {
@@ -101,4 +106,28 @@ small {
   text-align: center;
   margin: 18px;
   font-size: 15px;
+}
+
+.hamburger-Img {
+  width: 27px;
+  margin-left: 12px;
+  margin-top: 12px;
+  position: fixed;
+  z-index: 1;
+  padding: 13px 13px;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.close-Img{
+  color: #fff;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  z-index: 1;
+  position: fixed;
+  left: 90vw;
+  top: 2vh;
 }
