--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,9 +1,20 @@
+
+.phone{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+
+
 .fav-contact {
   padding-top: 100px;
 }
 
 .mb-30 {
   margin-bottom: 30px;
+  margin-top: 50px;
 }
 
 .contact-heading {
