--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -36,7 +36,7 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/dark_canon.png");
   height: 550px;
   background-size: cover;
-  background-position: center;
+  background-position: 50%;
   background-repeat: no-repeat;
   position: relative;
 }
@@ -85,8 +85,19 @@
   display: block;
 }
 
+@media screen and (max-width: 425px) {
+  .img-hover:hover {
+    filter: brightness(100%) !important;
+  }
+}
+
 .img-hover:hover {
   filter: brightness(50%);
+  cursor: pointer;
+}
+
+.img-hover:hover h3 {
+  filter: brightness(100%) !important;
   cursor: pointer;
 }
 
