--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -41,3 +41,10 @@ p{
   width: 200px;
   height: auto;
 }
+
+.mecanon{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
