--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -33,7 +33,7 @@
 */
 
 .fav-banner {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../../assets/greenme.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../../assets/canoneye.jpeg");
   height: 550px;
   background-size: cover;
   background-position: 50%;
@@ -51,6 +51,9 @@
 }
 .banner-text span {
   font-size: 18px;
+  background-color: #000000;
+  padding: 5px;
+  border-radius: 2px;
 }
 
 .fav-qoute {
@@ -112,8 +115,8 @@
     margin-right: auto;
     width: 50%;
   }
-  .phone{
-    width: 100% !important;
+  .mecanon {
+    width: 100%;
   }
 }
 
