--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -33,7 +33,7 @@
 */
 
 .fav-banner {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/canoneye.webp");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/canoneye.jpeg");
   height: 550px;
   background-size: cover;
   background-position: 50%;
